--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
     <!-- Mind AR Plugin -->
-    <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script>
+    <!-- <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script> -->
+
+    <script src="scripts/aframe.min.js"></script>
+    <script src="scripts/mindar-image-aframe.prod.js"></script>
 
     <!-- Google Analytics -->
     <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-6QH99Y0XFB"></script>
