--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
   setTimeout(() => {
     scene.play(); // Resume rendering
     arSystem.start(); // Restart tracking
-  }, 300); // Delay to stabilize after rotation
+  }, 100); // Delay to stabilize after rotation
 });
 </script>
 
@@ -328,7 +328,7 @@
         <!-- Assets -->
         <a-assets>
           <img id="card" src="target\image.jpg" />
-          <img id="icon-play" src="img\play1.png" />
+          <img id="icon-play" src="img\playIcon.png" />
           <img id="icon-download" src="img\download.png" />
           <img id="icon-logo" src="img\logo.png" />
           <video id="mtpl-video-webm" autoplay="false" loop="true" src="video/video.webm"></video>
@@ -350,7 +350,7 @@
               animation__reset="property: scale; to: 1 1 1; dur: 180; easing: easeOutQuad; startEvents: reset">
             <a-entity id="portfolio-item0">
               <a-video id="paintandquest-video-link" webkit-playsinline playsinline width="0.96" height="0.6" position="0 0 0"></a-video>
-              <a-image id="paintandquest-preview-button" class="clickable" src="#icon-play" alpha-test="0.2" position="0 0 0.01" height="0.2" width="0.2"></a-image>
+              <a-image id="paintandquest-preview-button" class="clickable" src="#icon-play" alpha-test="0.1" position="0 0 0.01" height="0.55" width="0.9"></a-image>
             </a-entity>
           </a-entity>
 
