--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       });
     </script>
 
-<script>
+<!-- <script>
   window.addEventListener("orientationchange", function () {
   console.log("Orientation changed: " + window.orientation);
   
@@ -190,7 +190,7 @@
     arSystem.start(); // Restart tracking
   }, 100); // Delay to stabilize after rotation
 });
-</script>
+</script> -->
 
     <style>
       body {
