--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               paintandquestVideoWebm.play();
             }
           } 
-          else if(paintandquestPreviewButton.getAttribute("visible") === false) {
+          else{
             paintandquestPreviewButton.setAttribute("visible", true);
 
             if (canplayWebm === "probably" || canplayWebm === "maybe") {
