--- a/index.html
+++ b/index.html
@@ -263,6 +263,29 @@
       max-width: 300px; /* Limit the image size */
       height: auto;
     }
+    a-scene {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+/* For Portrait mode */
+@media (orientation: portrait) {
+  a-scene {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+/* For Landscape mode */
+@media (orientation: landscape) {
+  a-scene {
+    width: 100%;
+    height: 100%;
+  }
+}
+
     </style>
   </head>
   <body>
