--- a/index.html
+++ b/index.html
@@ -263,28 +263,21 @@
       max-width: 300px; /* Limit the image size */
       height: auto;
     }
-    a-scene {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-/* For Portrait mode */
-@media (orientation: portrait) {
-  a-scene {
-    width: 100%;
+
+    @media (orientation: landscape) {
+  body, html {
     height: 100%;
+    width: 100%;
+    margin: 0;
+    overflow: hidden;
+  }
+
+  .example-container, a-scene {
+    height: 100%;
+    width: 100%;
   }
 }
 
-/* For Landscape mode */
-@media (orientation: landscape) {
-  a-scene {
-    width: 100%;
-    height: 100%;
-  }
-}
 
     </style>
   </head>
@@ -300,7 +293,7 @@
       </div>
     <div>
       <!-- Scene Setup -->
-      <a-scene mindar-image="filterMinCF:0.001; filterBeta: 50; warmupTolerance: 5; missTolerance: 5; imageTargetSrc: target/image.mind; showStats: false; uiScanning: #example-scanning-overlay;" embedded color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: true">
+      <a-scene mindar-image="filterMinCF:0.001; filterBeta: 50; warmupTolerance: 5; missTolerance: 5; imageTargetSrc: target/image.mind; showStats: false; uiScanning: #example-scanning-overlay;" embedded color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: true" fullscreen="true">
         
         <!-- Assets -->
         <a-assets>
