--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
       height: auto;
     }
 
-    @media (orientation: landscape) {
+    /* @media (orientation: landscape) {
   body, html {
     height: 100%;
     width: 100%;
@@ -289,7 +289,19 @@
     height: 100%;
     width: 100%;
   }
+} */
+
+html, body, .example-container, a-scene {
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  width: 100vw !important;
+  height: 100vh !important;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
+
     </style>
   </head>
   <body>
