--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="scripts/mindar-image-aframe.prod.js"></script>
 
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6QH99Y0XFB"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-B5KGQHBNP4"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const banner = document.getElementById("cookie-consent-banner");
@@ -27,7 +27,7 @@
         window.gtag = gtag;
     
         gtag('js', new Date());
-        gtag('config', 'G-6QH99Y0XFB');
+        gtag('config', 'G-B5KGQHBNP4');
     
         // Update consent **AFTER** GA is fully loaded
         gtag('consent', 'update', {
