--- a/index.html
+++ b/index.html
@@ -436,8 +436,16 @@
   </head>
   <body>
     <!-- Consent Banner -->
-    <div id="consent-banner">
+    <!-- <div id="consent-banner">
       <p>This website uses cookies for analytics. Do you accept?</p>
+      <button id="accept-consent">Accept</button>
+      <button id="decline-consent">Decline</button>
+    </div> -->
+
+    <!-- Consent Banner -->
+    <div id="consent-banner">
+      <p>This website uses cookies for analytics. By continuing, you accept our use of cookies.</p>
+      <p><a href="https://monolithtech-my.sharepoint.com/:b:/g/personal/jvinayagam_monolith_asia/EQccGMM8tZFAiRi1hChVoskB-Z3UXpgoqSHiz8YrsNeMbA?e=MYMffH" target="_blank">Read our Terms & Conditions</a></p>
       <button id="accept-consent">Accept</button>
       <button id="decline-consent">Decline</button>
     </div>
